2008-11-16  Philip Withnall  <philip@tecnocode.co.uk>

	* README:
	* configure.ac: Updated GTK+ dependency to 2.14 for gtk_show_uri().
	* src/link.c (almanah_link_get_value), (almanah_link_get_value2):
	* src/link.h:
	* src/links/file.c (file_format_value), (file_view):
	* src/links/note.c (note_format_value), (note_view):
	* src/links/uri.c (uri_format_value), (uri_view):
	* src/main-window.c (mw_calendar_day_selected_cb):
	* src/storage-manager.c (almanah_storage_manager_add_entry_link):
	Clean up the link API a little to reduce the number of string
	duplications, and also clean up the code for viewing URIs and files.

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* src/link.c: Remove an unnecessary comment.
	* src/main-window.c (get_selected_date),
	(add_link_to_current_entry), (remove_link_from_current_entry),
	(mw_calendar_day_selected_cb), (mw_links_value_data_cb):
	Refactor some of the date handling code into a separate function.
	* src/interface.c (almanah_calendar_month_changed_cb):
	* src/storage-manager.c
	(almanah_storage_manager_get_month_marked_days):
	* src/storage-manager.h: Use a variable-length array for the
	mark data for each month.

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac: Use AC_HELP_STRING.

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* src/entry.c (almanah_entry_get_content):
	* src/entry.h:
	* src/main-window.c (mw_calendar_day_selected_cb):
	* src/printing.c (print_entry):
	* src/storage-manager.c (almanah_storage_manager_search_entries):
	Fix problems with automatically creating tags when deserialising an
	entry into a GtkTextBuffer.
	* src/search-dialog.c (sd_search_button_clicked_cb): Make sure the
	result list is cleared before doing a new search.

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c (almanah_storage_manager_disconnect): Fixed
	string ("s/almanah/diary/").

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>
